force-app/main/default/objects/Credentials__c/fields/CompanyConnectUserId__c.field-meta.xml
<CustomField>
    <fullName>CompanyConnectUserId__c</fullName>
    <label>CompanyConnectUserId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>