force-app/main/default/objects/Credentials__c/fields/CompanyInfo_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CompanyInfo_Account_Id__c</fullName>
    <description>The account id of the account of the company info DATA user. For resell customers that is the appsolutely account id.</description>
    <label>CompanyInfo Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>