force-app/main/default/objects/Credentials__c/fields/CompanyInfoResellerAdminPassword__c.field-meta.xml
<CustomField>
    <fullName>CompanyInfoResellerAdminPassword__c</fullName>
    <label>Company Info Reseller Admin Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>