force-app/main/default/objects/Credentials__c/fields/CompanyInfoResellerAdminUsername__c.field-meta.xml
<CustomField>
    <fullName>CompanyInfoResellerAdminUsername__c</fullName>
    <label>Company Info Reseller Admin Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>