force-app/main/default/objects/Credentials__c/fields/CompanyInfoUserId__c.field-meta.xml
<CustomField>
    <fullName>CompanyInfoUserId__c</fullName>
    <label>CompanyInfoUserId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>