force-app/main/default/objects/Credentials__c/fields/Last_Executed_Batch__c.field-meta.xml
<CustomField>
    <fullName>Last_Executed_Batch__c</fullName>
    <description>The time when &quot;UpdateDossiersBatch&quot; is executed</description>
    <label>Last Executed Batch</label>
    <type>DateTime</type>
</CustomField>